--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,9 +42,11 @@ dependencies {
     implementation 'com.android.volley:volley:1.1.1'
 
     implementation 'com.google.firebase:firebase-auth:20.0.2'
+    implementation 'androidx.wear:wear:1.0.0'
     testImplementation 'junit:junit:4.12'
     implementation 'de.hdodenhof:circleimageview:3.1.0'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    compileOnly 'com.google.android.wearable:wearable:2.5.0'
 
 }
