--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -47,6 +47,7 @@
         <activity android:name=".MainActivity" />
         <activity android:name=".HomeAdminActivity" />
         <activity android:name=".admin_tambahmenu" />
+        <activity android:name=".ListMakanan" />
     </application>
 
 </manifest>
